--- a/index.html
+++ b/index.html
@@ -7,132 +7,61 @@
 <body>
 <h1>Hello HTML</h1>
 <img style="width: 300px" src="img/yoda-quotes.jpeg" alt="yoda">
-<!--1-->
-<html></html>
-<!--Тег який містить в собі всю гіпертекстову розмітку сторінки-->
 
-<!--2-->
-<meta>
-<!--Містить налаштування дозволяющи підтримання сторінкою латиниці і кирилиці-->
+<html><!-- html тег який містить в собі всю гіпертекстову розмітку сторінки-->
+<head><!--В ньому описується як саме буде відображатися сторінка в браузері-->
+    <meta><!--Містить налаштування дозволяющи підтримання сторінкою латиниці і кирилиці-->
+    <title></title><!--Визначає назву документу-->
+    <link rel="" href=""><!--Дозволяє підєднати до одного файла інший. (Наприклад файл CSS до html-->
+</head>
+<body><!--Тіло сторінки в якому пишеться розмітка-->
+<header><!--Шапка сторінки-->
+    <h1>Main Page</h1><!--Тег заголовка, від <h1> до <h6>, від найбільшого до меншого-->
+    <img src="img/welcome.jpeg" alt="welcome">
+    <!--Тег дозволяющий додати зображення, "src" - вказує на шлях до зображення; "alt" - містить опис зображення(що саме зображено)-->
+</header>
+<main><!--Є семантичним. Блоковий, вказує на основний вміст документу,може містити в собі інщі теги-->
+    <p><!--Параграф - текст в середині цього тегу має відступи над собою і під собою-->
+        <strong>Lorem Ipsum</strong><!--Семантичний. Робить текст жирним-->
+        is simply dummy text of the printing and typesetting industry. <em>Lorem Ipsum</em>
+        <!--Семантичний. Робить текст курсивом-->
+        <s>has been the industry's</s><!--Закреслює текст або слово які є всередині даного тегу-->
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        <u>a type specimen book.</u><!--Підкреслює текст-->
+    </p>
+    <div><!--Блок який може містити в собі інщі теги в тому числі і <p>-->
+        <ul><!--Створює маркований список-->
+            <li><!--Елемент списків <ul> i <ol> в який може вкладати інщі теги-->
+                <a href="https://en.wikipedia.org/wiki/Cat">Click here</a><!--Тег створюючий посилання. Між відкриваючим і закриваючим вказуємо назву посилання.
+ Властивості "href" дозволяє відкривати посилання в поточному вікні -->
+            </li>
+        </ul>
+    </div>
+    <ol><!--Створює нумерований список-->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Dog" target="_blank">Click here</a>
+            <!--Тег створюючий посилання. Між відкриваючим і закриваючим вказуємо назву посилання.
+             Властивость"target" -  дозволяює відкривати посилання в новому вікні -->
+        </li>
+    </ol>
+    <label><input></label><!--Створює поле для вводу -->
+    <button style="background: aqua"> Send</button><!--Створює кнопку-->
+</main>
+<hr><!--Додає лінію через всю сторінку між елементами-->
+<footer><!--Підвал сторінки-->
+    <span>    <!--Вбудований контейнер, який використовується для розмітки частини тексту або частини документа.-->
+It is a long established fact <br><!--Переносить на нову строку все що після нього(розриває строки)-->
+that a reader will be distracted by the readable content of a page when looking at its layout.
+    </span>
+</footer>
+</body>
+</html>
 
-<!--3-->
-<title></title>
-<!--Визначає назву документу-->
+<b></b><!--Робить текст жирним-->
 
+<i></i><!--Робить текст курсивом-->
 
-<!--4-->
-<header></header>
-<!--Шапка сторінки, задає заголовок-->
-
-<!--5-->
-<footer></footer>
-<!--Підвал сторінки-->
-
-
-<!--6-->
-<head></head>
-<!--В ньому описується як саме буде відображатися сторінка в браузері-->
-
-<!--7-->
-<body></body>
-<!--Тіло сторінки в якому пишеться розмітка-->
-
-<!--8-->
-<p></p>
-<!--Параграф - текст в середині цього тегу має відступи над собою і під собою-->
-
-<!--9-->
-<div></div>
-<!--Блок який може містити в собі інщі теги в тому числі і <p>-->
-
-<!--10-->
-<ul></ul>
-<!--Створює маркований список-->
-
-<!--11-->
-<ol></ol>
-<!--Створює нумерований список-->
-
-<!--12-->
-<li></li>
-<!--Елемент списків <ul> i <ol> в який може вкладати інщі теги-->
-
-<!--13-->
-<h1></h1>...<h6></h6>
-<!--Тег заголовка, від <h1> до <h6>, від найбільшого до меншого-->
-
-<!--14-->
-<a href=""></a> ; <a target="_blank"></a>
-<!--Тег створюючий посилання. Між відкриваючим і закриваючим вказуємо назву посилання.
- Властивості "href", "target" -  дозволяють відкривати посилання в поточному вікні або в новому-->
-
-<!--15-->
-<img src="" alt="">
-<!--Тег дозволяющий додати зображення, "src" - вказує на шлях до зображення; "alt" - містить опис зображення(що саме зображено)-->
-
-<!--16-->
-<button></button>
-<!--Створює кнопку-->
-
-<!--17-->
-<label><input></label>
-<!--Створює поле для вводу -->
-
-<!--18-->
-<link rel="" href="">
-<!--Дозволяє підєднати до одного файла інший. (Наприклад файл CSS до html-->
-
-<!--19-->
-<main></main>
-<!--Є семантичним. Блоковий, вказує на основний вміст документу,може містити в собі інщі теги-->
-
-
-<!--20-->
-<b></b>
-<!--Робить текст жирним-->
-
-
-<!--21-->
-<strong></strong>
-<!--Семантичний. Робить текст жирним-->
-
-
-<!--22-->
-<i></i>
-<!--Робить текст курсивом-->
-
-
-<!--23-->
-<em></em>
-<!--Семантичний. Робить текст курсивом-->
-
-
-<!--24-->
-<s></s>
-<!--Закреслює текст або слово які є всередині даного тегу-->
-
-<!--25-->
-<u></u>
-<!--Підкреслює текст-->
-
-<!--26-->
-<nav></nav>
-<!--Семантичний, вказує на вміс навігаційних посилань-->
-
-<!--27-->
-<br>
-<!--Переносить на нову строку все що після нього(розриває строки)-->
-
-<!--28-->
-<hr>
-<!--Додає лінію через всю сторінку між елементами-->
-
-<!--29-->
-<span></span>
-<!--Вбудований контейнер, який використовується для розмітки частини тексту або частини документа.-->
-
-
-
+<nav></nav><!--Семантичний, вказує на вміс навігаційних посилань-->
 
 </body>
 </html>
